FIx padding and margins
The padding for the white background box was too small. These changes should fix that as well as some marginal problems.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,7 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-  padding:10px;
+  padding: 20px;
   display:flex;
   flex-direction:row;
   justify-content:space-evenly;
@@ -82,7 +82,7 @@ button.cancel {
   color: royalblue;
 }
 .Ibox{
-  margin:16px;
+  margin-right:16px;
   display:flex;
   flex:1;
   flex-direction:row;
@@ -91,7 +91,7 @@ button.cancel {
 }
 
 .Cbox{
-  margin:16px;
+  margin-left:16px;
   display:flex;
   flex:1;
   justify-content:flex-end;
@@ -104,5 +104,6 @@ button.cancel {
   flex:1;
   flex-direction:column;
   justify-content:flex-start;
-  padding:8px;margin-top:8px;
+  padding:8px;
+  margin:8px;
 }
